<resources>
    <string name="app_name">Smart Health</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="smart_health">Smart Health</string>
    <string name="email_address">Entetr Email</string>
    <string name="register">Register</string>
    <string name="register1">Register</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="user_name">User Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="default_text">Default Text</string>
    <string name="sign_in">SIGN IN</string>
    <string name="health">Good health comes from taking care of your body, mind, and relationships</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
</resources>